grammar_Rat25F_no_left_recursion.txt
# Rat25F (subset) — Left recursion removed and left factored

<Program>         -> <Statements>
<Statements>      -> <Statement> <Statements> | ε
<Statement>       -> <Assign> ;
<Assign>          -> <Identifier> = <Expression>
<Expression>      -> <Term> <ExpressionPrime>
<ExpressionPrime> -> + <Term> <ExpressionPrime> | - <Term> <ExpressionPrime> | ε
<Term>            -> <Factor> <TermPrime>
<TermPrime>       -> * <Factor> <TermPrime> | / <Factor> <TermPrime> | ε
<Factor>          -> <Identifier> | <Number> | ( <Expression> )
